# zonedrop

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
zonedrop/: __init__.py  __main__.py  cli.py  namecheap.py  sync.py
