[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "zonedrop"
version = "0.1.0"
description = "Idempotent Namecheap DNS zone sync with safety guards"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["namecheap", "dns", "cli"]

[project.scripts]
zonedrop = "zonedrop.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/zonedrop"

[tool.setuptools.packages.find]
include = ["zonedrop*"]
