[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "zonedrop"
version = "0.1.0"
description = "Idempotent DNS zone sync for Namecheap domains and DNS — CLI with safety guards, backups, and verification"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"
keywords = ["namecheap", "dns", "cli"]

[project.optional-dependencies]
vault = ["cryptography"]

[project.scripts]
zonedrop = "zonedrop.cli:main"

[project.urls]
Homepage = "https://github.com/rasrobo/zonedrop"

[tool.setuptools.packages.find]
include = ["zonedrop*"]

[tool.setuptools]
license-files = []
